# LiderSeguidorA

./: LICENSE  README.md
qgui/: CMakeLists.txt  CMakeLists.txt.user.5015d08  mainpage.dox  package.xml
qgui/include/qgui/: main_window.hpp  qnode.hpp
qgui/resources/: images.qrc
qgui/src/: main.cpp  main_window.cpp  qnode.cpp
qgui/ui/: main_window.ui  main_windowb.ui
tutoriales_basicos/: CMakeLists.txt  package.xml
tutoriales_basicos/Gazebo/: Espacio_TB3  Espacio_Trabajo.xml  MundoSTT2.world  MundoSTT2_1Obs.world  MundoSTT2_2Obs.world  MundoSTT2_3Obs.world  MundoSTT2_4Obs.world  MundoTT.world  mapCasa.pgm  mapCasa.yaml  mapaCasaB.pgm  mapaCasaB.yaml  mapaCasaC.pgm  mapaCasaC.yaml  mapaCasaD.pgm  mapaCasaD.yaml  mapaOrientado.pgm  mapaOrientado.yaml  mapaReal.pgm  mapaReal.yaml  mapaTT2.pgm  mapaTT2.yaml
tutoriales_basicos/Gazebo/Cilindro/: model.config  model.sdf
tutoriales_basicos/Gazebo/Cylinder_2/: model.config  model.sdf
tutoriales_basicos/Gazebo/Espacio_1/: model.config  model.sdf
tutoriales_basicos/Gazebo/Pared/: model.config  model.sdf
tutoriales_basicos/Gazebo/ParedOrientada/: model.config  model.sdf
tutoriales_basicos/assigment/: robot_move.py  turtlesim_pose.py  turtlesim_posev.py
tutoriales_basicos/launch/: 2_turtlebot3_simulacion.launch  CLider_Seguidor.launch  Lacciones.launch  Lider.launch  LiderSBC.launch  Lider_Seguidor.launch  RvizReal.launch  Rviz_sim.launch  acciones.launch  amcl_tb3.launch  amcl_tb3_0.launch  amcl_tb3_1.launch  entorno1.launch  escanear_sim.launch  simulacion.launch  simulacion2.launch  simulacion3.launch  simulacion4.launch  simulacion5.launch  turtlebot3_hector.launch  turtlebot3_remote_pc.launch  turtlebot3_sbc.launch  turtlebot3_simulacion.launch
tutoriales_basicos/msg/: Histogram.msg
tutoriales_basicos/scripts/: Laser_Distance.py  Laser_VFF_pub.py  Laser_cercania.py  Laser_vff.py  Laser_vfh.py  TrayB1.npy  TrayC1.npy  Untitled-1  control.py  iot_sensor_publisher.py  laser.py  listener.py  matrixDynamic_lane2.npy  robot_cleaner.py  talker.py  tb3_2control.py  tb3_2follower.py  tb3_cleaner.py  tb3_control.py  tb3_follower.py  tb3_plotter.py  tb3_plotter2.py  tb3_plotter3.py  tb3_plotter4.py  tb3_pplot.py  turtlebot2_cleaner.py  turtlebot3_cleaner.py  turtlebot3_control.py
tutoriales_basicos/scripts/Datos_Guardados/: Grafica_2019_05_08_00_52_33.npy  Grafica_2019_05_08_00_52_33.xlsx  Grafica_2019_05_08_01_03_09.npy  Grafica_2019_05_08_01_03_09.xlsx  Grafica_2019_05_08_01_13_46.npy  Grafica_2019_05_08_01_13_46.xlsx  Grafica_2019_05_08_01_18_07.npy  Grafica_2019_05_08_01_18_07.xlsx  Grafica_2019_05_08_14_01_21.npy  Grafica_2019_05_08_14_01_21.xlsx  Grafica_2019_05_08_14_09_19.npy  Grafica_2019_05_08_14_09_19.xlsx  Grafica_2019_05_08_14_12_55.npy  Grafica_2019_05_08_14_12_55.xlsx  Grafica_2019_05_11_12_37_53.npy  Grafica_2019_05_11_12_37_53.xlsx  Grafica_2019_05_12_20_02_33.npy  Grafica_2019_05_12_20_02_33.xlsx  Grafica_2019_05_13_23_33_44.npy  Grafica_2019_05_13_23_33_44.xlsx  Grafica_2019_05_13_23_36_52.npy  Grafica_2019_05_13_23_36_52.xlsx  Grafica_2019_05_13_23_36_58.npy  Grafica_2019_05_13_23_36_58.xlsx  Grafica_2019_05_13_23_40_48.npy  Grafica_2019_05_13_23_40_48.xlsx  Grafica_2019_05_13_23_42_05.npy  Grafica_2019_05_13_23_42_05.xlsx  Grafica_2019_05_13_23_42_56.npy  Grafica_2019_05_13_23_42_56.xlsx  Grafica_2019_05_13_23_47_49.npy  Grafica_2019_05_13_23_47_49.xlsx  Grafica_2019_05_14_00_00_46.npy  Grafica_2019_05_14_00_00_46.xlsx  Grafica_2019_05_14_00_12_56.npy  Grafica_2019_05_14_00_12_56.xlsx  Grafica_2019_05_14_00_13_02.npy  Grafica_2019_05_14_00_13_02.xlsx  Grafica_2019_05_16_16_14_46.npy  Grafica_2019_05_16_16_14_46.xlsx  (+7 more)
tutoriales_basicos/scripts/Generacion _de_Trayectorias/: EjemploPLot.py  Generar_Trayectoria.py  TrayA1.npy  (+24 more)
tutoriales_basicos/src/: add_two_ints_client.cpp  add_two_ints_server.cpp  listener.cpp  robot_cleaner.cpp  robot_cleaner_ios.cpp  talker.cpp
(+15 files in other folders)
