<?xml version="1.0"?>
<package>
  <name>qgui</name>
  <version>0.1.0</version>
  <description>

     qgui

  </description>
  <maintainer email="spartanzarazua117@gmail.com">Luis Fernando Zarazua Aguilar</maintainer>
  <author>Luis Fernando Zarazua Aguilar</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <!-- build_depend>libqwt5-qt4-dev<build_depend -->
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>  
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <!-- run_depend>libqwt5-qt4-dev<run_depend -->
 
</package>
